@@ -4,13 +4,13 @@ Hash: SHA1
 DIST roodi-2.0.0.gem 17920 RMD160 303582197f9714a1f9e337e9dba4aa175e1652c8 SHA1 6ce0009c066e9b08cbae7e99e5e385e92c1b0927 SHA256 61f4a27d555aa8d9421fa35cc5867f270d2ab84af2512e17ce48653044ad099d
 DIST roodi-2.1.0.gem 19968 RMD160 e4fe20aa3e089f22152297460d8dfe2f918073ab SHA1 fc8c1b28de4f8906eaca013ed0ee5f63013108e3 SHA256 11ea5158d3f69434b9e1bd1a71cd00791cfbb8e3552dbab6bcea2c925a19ea4b
 EBUILD roodi-2.0.0.ebuild 378 RMD160 03cc4cc5ec53ca7ade7111540495fe9d1a0ee234 SHA1 cc74b9ff5ef6340a04211726f614be04bf3d0888 SHA256 084aaaca575254ab87a4d9ed49736da44d81062da4df8e0a038811c2b7774081
-EBUILD roodi-2.1.0.ebuild 615 RMD160 e37cf75520b945e536af4364193c9b4ad0cc9327 SHA1 ed91bf50bca04a33159cf78b122d1ddb9075380b SHA256 3cea8e72a579bbdefb60cfd0b65dc8dc1b2fe96e442fef40a2f612607a81be48
-MISC ChangeLog 486 RMD160 dee23a689e954b3718eea0e65d3d13d91a027659 SHA1 eacd0c744f16471bf9dac8baafba7925e4c62482 SHA256 65cff0273e602b63755b78936b98704836f9ce3c582f0bf5ec550a0a6aa1a992
+EBUILD roodi-2.1.0.ebuild 703 RMD160 845a9e9c0757c367f63d25ffe077941ec08864d5 SHA1 c08922e00aa0f739d3b2148ea02178bd4b4cc0c4 SHA256 c634286401eb01312a242a3bca5db2e8e86a0c4215e2bfb58a83eaa28c99d3cd
+MISC ChangeLog 583 RMD160 c23d341330dfb21d0bab104ad2a57e8eebc5e2b3 SHA1 103a30a0bcba6dc2c55dc92f12bc34408d906cc1 SHA256 e2d55d4f24e79f2bbc97d7db79a533f7462c182bfa0cb44d21fc9083279db9f1
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAks7meMACgkQeM7EJeUH71Pm/gCeMsA4d7BMsCP9el3scWeAQwCi
-3lcAn34cJtgiQ6Q/t/anKAQqx+I33cOu
-=sKkI
+iEYEARECAAYFAks7nGYACgkQeM7EJeUH71MvDwCdHDej8PyiQ+/EW7ZzYagHolwH
+6hMAmwW1SVwZE9LXP4l/wODS9Vb3KXXo
+=rasb
 -----END PGP SIGNATURE-----
