@@ -25,3 +25,8 @@ ruby_add_rdepend dev-ruby/ruby_parser
 
 ruby_add_bdepend doc "dev-ruby/hoe dev-ruby/rdoc"
 ruby_add_bdepend test "dev-ruby/hoe dev-ruby/rspec"
+
+each_ruby_install() {
+	each_fakegem_install
+	ruby_fakegem_newins roodi.yml roodi.yml
+}
